fixing align text of hour classs

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -858,15 +858,9 @@ dl.nav-tabs{
 	border-bottom: 3px solid @hourBorderColor;
 	margin-top: 10px;
 	padding: 0 10px;
+	text-align: right;
 }
-// .BgAlternate{
-// 	background-color: @BgAlternate;
-// 	height: 50%;
-// 	left: 0;
-// 	position: absolute;
-// 	width: 100%;
-// 	z-index: 1;
-// }
+
 .footer-inner{
 	padding-top: 10px;
 }
